Narrow option inputs to address layout issues

--- a/quick-start/src/main/ui/app/select-key-values/select-key-values.component.scss
+++ b/quick-start/src/main/ui/app/select-key-values/select-key-values.component.scss
@@ -14,7 +14,7 @@
 
 .key-value-input {
   float:left;
-  width: 235px;
+  width: 180px;
   padding-left:10px;
 }
 
